@@ -1,5 +1,6 @@
 
   - Fix the Windows recognition regex in the code as well.
+  - rt #80341: Accept use Modern::Perl as strict and warnings. peter.vereshagin
 
 0.15 - Thu Dec 27 09:59:29 2012
   - rt #81849 and rt #79515: disable the coverage testing unless
